@@ -1,12 +1,6 @@
-ext {
-    shadowJarEnabled = true
+plugins {
+    id "io.micronaut.build.internal.convention-core-library"
 }
-
-
-internalSanityChecks {
-    expectedServiceCount.put('io.micronaut.inject.BeanDefinitionReference', 20)
-    expectedServiceCount.put('io.micronaut.core.beans.BeanIntrospectionReference', 5)
-}           
 
 dependencies {
     annotationProcessor project(":inject-java")
@@ -52,5 +46,12 @@ dependencies {
 spotless {
     java {
         targetExclude '**/io/micronaut/scheduling/cron/CronExpression.java'
+    }
+}
+
+tasks.withType(Test) {
+    if(JavaVersion.current().majorVersion.toInteger() >= 17) {
+        logger.warn("Opening java.util, so SystemLambda can work")
+        jvmArgs += ['--add-opens', 'java.base/java.util=ALL-UNNAMED']
     }
 }
